<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/winnerAnnouceLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:text="@string/winnerAnnouceLabel"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/timeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/winnerAnnouceLabel"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp"
        android:text="@string/timeLabelText"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/loserNewGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/newGameBtn" />

    <TextView
        android:id="@+id/scoreLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/timeLabel"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/scoreLabelText"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>
